# paperboy

./: .gitignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json  paperboy-blueprint.md  paperboy-memories.md  what are some of the latest multimodal on device c.md
.claude/: settings.json
.github/workflows/: publish-paperboy-converter.yml  publish-paperboy.yml  supply-chain-guard.yml
paperboy-app/: .gitignore  README.md  package-lock.json  package.json
paperboy-app/scripts/: build-converter.mjs  dev-server.mjs  sync-vendor.mjs
paperboy-app/src/: index.html
paperboy-app/src-tauri/: Cargo.toml  tauri.conf.json
paperboy-app/src-tauri/capabilities/: default.json
paperboy-app/src-tauri/icons/: icon.icns
paperboy-app/src-tauri/src/: main.rs
paperboy-cli/: .gitignore  PUBLISH_CHECKLIST.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
paperboy-cli/src/: ai.ts  cli.ts  config.ts  converter.ts  crawl.ts  doctor.ts  index.ts  providers.ts  setup.ts
paperboy-cli/tests/: cli.integration.test.ts  config.test.ts  converter.test.ts  doctor.test.ts  setup.test.ts
paperboy-converter/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
paperboy-converter/src/: dom.ts  (+4 more)
paperboy-ext/: .gitignore  README.md  background.js  build.js  content.js  manifest.json  package-for-store.js  package-lock.json  package.json  sidepanel.bundle.js  sidepanel.html  sidepanel.js  styles.css
paperboy-widget/: README.md  build.js  package-lock.json  package.json  vitest.config.js
scripts/: bump-version.mjs
(+26 files in other folders)
